fix(ui): header | user photo alignemtn fix.

--- a/components/Layout/Header/style.scss
+++ b/components/Layout/Header/style.scss
@@ -51,7 +51,8 @@
     text-shadow: 1px 1px 1px #00000040;
 
     > div > figure {
-      display: inline-block;
+      display: flex;
+      justify-content: center;
       margin: 0;
       padding: 0;
       vertical-align: top;
