--- a/components/Respond/RespondBox/style.scss
+++ b/components/Respond/RespondBox/style.scss
@@ -13,6 +13,8 @@
     border-bottom: 1px solid #f0f5f7;
 
     figure {
+      display: flex;
+      justify-content: center;
       width: 60px;
       height: 60px;
       padding: 0;
@@ -29,7 +31,6 @@
       }
 
       img {
-        width: 100%;
         height: 100%;
       }
     }
